@@ -42,10 +42,6 @@ class BaseCaptchaTextInput(MultiWidget):
         self._key = key
         self.id_ = self.build_attrs(attrs).get('id', None)
 
-    def render(self, name, value, attrs=None):
-        attrs.update(dict(autocomplete='off'))
-        return super(BaseCaptchaTextInput, self).render(name, self._value, attrs=attrs)
-
     def id_for_label(self, id_):
         if id_:
             return id_ + '_1'
@@ -76,6 +72,7 @@ class CaptchaTextInput(BaseCaptchaTextInput):
 
     def format_output(self, rendered_widgets):
         hidden_field, text_field = rendered_widgets
+        text_field = text_field.replace('<input', '<input autocomplete="off"')
         return self._args['output_format'] % {
             'image': self.image_and_audio,
             'hidden_field': hidden_field,
@@ -88,7 +85,6 @@ class CaptchaTextInput(BaseCaptchaTextInput):
         self.image_and_audio = '<img src="%s" alt="captcha" class="captcha" />' % self.image_url()
         if settings.CAPTCHA_FLITE_PATH:
             self.image_and_audio = '<a href="%s" title="%s">%s</a>' % (self.audio_url(), ugettext('Play CAPTCHA as audio file'), self.image_and_audio)
-
         return super(CaptchaTextInput, self).render(name, self._value, attrs=attrs)
 
 
