@@ -8,6 +8,7 @@ Version 0.4.3
 * Support both Django 1.7 migrations and South migrations.
   Please note, you *must* add the following to your settings, if you are
   using South migrations and Django 1.6 or lower.
+* Make sure autocomplete="off" is only applied to the text input, not the hidden input (Issue #68, thanks @narrowfail)
 
 
 Version 0.4.2
